@@ -28,19 +28,32 @@ parser.variable()
 parser.time()
 parser.region()
 parser.plot()
-opts = PyCF.CFOptions(parser,2)
-infile = opts.cffile()
+opts = PyCF.CFOptions(parser,-2)
 
 if opts.options.level == None:
     level = 0
 else:
     level = opts.options.level
 
-if opts.nvars>1 and opts.ntimes>1:
-    sys.stderr.write('Error, can only have either more than one time slice or more than one variable!\n')
+count = 0
+numplots = 0
+if opts.nvars>1:
+    count = count + 1
+    numplots = opts.nvars
+if opts.ntimes>1:
+    count = count + 1
+    numplots = opts.ntimes
+if opts.nfiles>1:
+    count = count + 1
+    numplots = opts.nfiles
+    
+if count > 1:
+    sys.stderr.write('Error, can only have either more than one time slice or more than one variable or more than one file!\n')
     sys.exit(1)
-numplots = max(opts.nvars,opts.ntimes)
 
+infile = opts.cffile()
+var  = opts.vars(infile)
+time = opts.times(infile)
 # get number of plots
 deltax = 1.
 deltay = 1.
@@ -48,13 +61,10 @@ sizex = opts.options.width+deltax
 sizey = infile.aspect_ratio*opts.options.width+deltay
 
 plot=None
-var  = opts.vars(infile)
-time = opts.times(infile)
-thk = infile.getvar('thk')
 if numplots > 1:
     numx = int((opts.papersize[0])/(sizex))
     numy = int((opts.papersize[1])/(sizey))
-    numpages = int(numplots/(numx*numy))
+    numpages = int(float(numplots-0.1)/float(numx*numy))
     p=-1
     for i in range(0,numplots):
         if i%(numx*numy)==0:
@@ -69,11 +79,16 @@ if numplots > 1:
                 plot = opts.plot()
             bigarea = PyGMT.AreaXY(plot,size=opts.papersize)
 
+        if opts.nfiles>1:
+            infile = opts.cffile(i)
         if opts.nvars>1:
             var  = opts.vars(infile,i)
+        else:
+            var  = opts.vars(infile)
         if opts.ntimes>1:
             time = opts.times(infile,i)
-    
+        else:
+            time = opts.times(infile)
         x = i%numx
         y = int((i-p*(numx*numy))/numx)
         area = PyCF.CFArea(bigarea,infile,pos=[x*sizex,opts.papersize[1]-(y+1)*sizey],size=sizex-deltax)
@@ -81,7 +96,11 @@ if numplots > 1:
             area.land(time)
         area.image(var,time,clip = opts.options.clip,level=level,mono=opts.options.mono)
         area.coastline()
-        area.contour(thk,[0.1],'-W2/0/0/0',time)
+        try:
+            thk = infile.getvar('thk')
+            area.contour(thk,[0.1],'-W2/0/0/0',time)
+        except:
+            pass
         area.axis='wesn'
         area.coordsystem()
         area.printinfo(time)
@@ -94,7 +113,11 @@ else:
     if var.name=="vel":
         area.velocity_field(time,level=level)
     area.coastline()
-    area.contour(thk,[0.1],'-W2/0/0/0',time)
+    try:
+        thk = infile.getvar('thk')
+        area.contour(thk,[0.1],'-W2/0/0/0',time)
+    except:
+        pass
     if var.name == 'is' or var.name == 'thk':
         area.contour(var,[500,1000,2500,3000],'-W1/255/255/255',time)
     area.coordsystem()
